# FastAPIProject

./: items_views.py  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py
shop-app/: pyproject.toml
users/: crud.py  schemas.py  views.py
